switch to trigger instead of forced flag
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/trunk@233299 13f79535-47bb-0310-9956-ffa450edef68